--- a/practice/style.css
+++ b/practice/style.css
@@ -1,21 +1,26 @@
 
+*{
+
+}
 #header{
   color: gray;
   background-color: khaki;
+  padding:0px 50px 0px 410px;
 }
 #header-img{
-    /* background-color:#a22115; */
+    background-color:#d3c15c;
     height: 400px;
     border: dotted #a22115 40px ;
-    border-radius: ;
+     padding: 30px 50px 30px 290px;
 }
 .img{
     width: 500px;
-    bor
+    padding: 40px;
 }
 .border{
     border: inset 10px gold ;
-    font-size: 30px   
+    font-size: 30px;
+     
 }
 .border3{
     height: 100px;
@@ -55,10 +60,11 @@
 .arrow2{
     height: 0;
     width: 0;
-    border-top: solid transparent 150px;
-    border-right: solid transparent 150px;
-    border-bottom: solid transparent 150px;
-    border-left: solid yellow 150px;
+    border-top: solid transparent 35vh;
+    border-right: solid transparent 35vh;
+    border-bottom: solid transparent 35vh;
+    border-left: solid yellow 35vh;
+
 }
 .arrow3{
 
