--- a/css/selctors.css
+++ b/css/selctors.css
@@ -128,5 +128,93 @@ span:nth-of-type(6n+2){
 p span:only-of-type{
     selects a span within any p if it is the only span in there.
 } 
-Last of Type Selector
-Select the last element of a specific type
+/* Last of Type Selector
+ Select the last element of a specific type */
+ :last-of-type{
+     Selects each last element of that type within another
+      element. Remember type refers the kind of tag,
+       so p and span are different types.
+ }
+ div:last-of-type{
+     selects the last div in every element.
+ } 
+p span:last-of-type{
+    selects the last span in every p.
+}
+/* Empty Selector */
+:empty{
+    Selects elements that don't have any other 
+    elements inside of them( that don't have children).
+}
+div:empty{
+    selects all empty div elements.
+} 
+/* Negation Pseudo-class 
+Select all elements that don't match the negation selector*/
+:not(X){
+  select all elements that do not match selector "X".
+}
+:not(#fancy){
+    selects all elements that do not have id="fancy".
+} 
+div:not(:first-child){
+    selects every div that is not a first child.
+} 
+:not(.big, .medium){
+    selects all elements that do not have
+     class="big" or class="medium".
+} 
+/* Attribute Selector
+Select all elements that have a specific attribute */
+/* [attribute]
+    Attributes appear inside the opening tag of an element,
+     like this: span attribute="value".
+      An attribute does not always have a value,
+       it can be blank! */
+a[href]{
+  selects all <a>lements that have a href="anything" attribute.
+} 
+[type]{
+  selects all elements that have a type="anything" attribute.
+} 
+/* Attribute Value Selector
+Select all elements that have a specific attribute value */
+/* [attribute="value"]
+Attribute selectors are case sensitive,
+ each character must match exactly. */
+input[type="checkbox"]{
+ selects all checkbox input elements.
+} 
+/* Attribute Starts With Selector */
+[attribute^="value"]{
+ Select all elements with an attribute value that
+ starts with specific characters
+}
+.toy[category^="Swim"]{
+    selects elements with class toy and either 
+    category="Swimwear or category="Swimming".
+} 
+/* Attribute Ends With Selector */
+[attribute$="value"]{
+    Select all elements with an attribute value that
+ ends with specific characters
+}
+img[src$=".jpg"]{
+    selects all images display a .jpg image.
+} 
+/* Attribute Wildcard Selector
+A useful selectorif you can identify
+ a common pattern in things like
+ class, href or src attributes. */
+[attribute*="value"]{
+    Select all elements with an attribute value that
+     contains specific characters anywhere
+}
+img[src*="/thumbnails/"] {
+    selects all image elements that show images from the
+     "thumbnails" folder.
+}
+[class*="heading"]{
+    selects all elements with "heading" in their class,
+     like class="main-heading" and class="sub-heading"
+} 
